# z2p

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: dockerhub-publish.yml  main.yml
cfg/: base.yaml
migrations/: 20220714055138_create_subscriptions_table.sql
scripts/: initdb.sh
src/: configuration.rs  lib.rs  logging.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriber.rs
tests/: health_check.rs
